@@ -282,7 +282,7 @@ TclCreateLiteral(
 		*globalPtrPtr = globalPtr;
 	    }
 	    if (flags & LITERAL_ON_HEAP) {
-		ckfree(bytes);
+		ckfree((char *) bytes);
 	    }
 	    globalPtr->refCount++;
 	    return objPtr;
@@ -290,7 +290,7 @@ TclCreateLiteral(
     }
     if (!newPtr) {
 	if (flags & LITERAL_ON_HEAP) {
-	    ckfree(bytes);
+	    ckfree((char *) bytes);
 	}
 	return NULL;
     }
@@ -438,7 +438,7 @@ TclRegisterLiteral(
 		|| ((objPtr->bytes[0] == bytes[0])
 		&& (memcmp(objPtr->bytes, bytes, (unsigned) length) == 0)))) {
 	    if (flags & LITERAL_ON_HEAP) {
-		ckfree(bytes);
+		ckfree((char *) bytes);
 	    }
 	    objIndex = (localPtr - envPtr->literalArrayPtr);
 #ifdef TCL_COMPILE_DEBUG
