@@ -1,3 +1,10 @@
+2009-07-22  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* macosx/tclMacOSXFCmd.c: CONST -> const
+	* generic/tclGetDate.y:
+	* generic/tclDate.c:
+	* generic/tclLiteral.c: (char *) cast in ckfree call
+
 2009-07-22 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
 	* generic/tclEvent.c: Refined the 20090617 patch on [exit]
